@@ -109,8 +109,13 @@ module Reek
   end
 
   class UtilityFunction < Smell
+    def initialize(context, num_stmts)
+      super
+      @num_stmts = num_stmts
+    end
+
     def recognise?(depends_on_self)
-      !depends_on_self
+      @num_stmts > 0 and !depends_on_self
     end
 
     def detailed_report
